--- a/index.html
+++ b/index.html
@@ -5,67 +5,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon Clone</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <div class="navSection">
+        <nav class="navbar navbar-expand-lg navbar-dark amazon-navbar">
+    <div class="container-fluid">
 
-  <!-- Header -->
-  <header>
-    <div class="navbar">
-      <div class="navlogo">
-        <img src="amazon.png" alt="Amazon Logo">
-      </div>
+      <!-- Logo -->
+      <a class="navbar-brand" href="#">
+        <img src="amazon.png" alt="Amazon" class="amazon-logo">
+      </a>
 
-      <div class="navaddress">
-        <p class="addfirst">Deliver to</p>
-        <div class="addicon">
-          <i class="fa-solid fa-location-dot"></i>
-          <p class="addsecond">India</p>
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#amazonNavbar" aria-controls="amazonNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navbar Content -->
+      <div class="collapse navbar-collapse" id="amazonNavbar">
+        <div class="d-lg-flex w-100 justify-content-between align-items-center">
+
+          <!-- Deliver To -->
+          <div class="text-white text-center flex-grow-1 px-2">
+            <small class="text-muted">Deliver to</small><br>
+            <i class="fa-solid fa-location-dot"></i> <span>India</span>
+          </div>
+
+          <!-- Search Bar -->
+          <div class="flex-grow-2 px-3 my-2 my-lg-0 amazon-search">
+            <form class="d-flex" role="search">
+              <select class="form-select category-select">
+                <option>All</option>
+              </select>
+              <input class="form-control search-input" type="search" placeholder="Search Amazon" aria-label="Search">
+              <button class="btn search-btn" type="submit">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </form>
+          </div>
+
+          <!-- Sign In -->
+          <div class="text-white text-center flex-grow-1 px-2">
+            <small>Hello, sign in</small><br>
+            <strong>Account & Lists</strong>
+          </div>
+
+          <!-- Returns & Orders -->
+          <div class="text-white text-center flex-grow-1 px-2">
+            <small>Returns</small><br>
+            <strong>& Orders</strong>
+          </div>
+
+          <!-- Cart -->
+          <div class="text-center flex-grow-1 px-2">
+            <a href="#" class="nav-link text-white">
+              <i class="fa-solid fa-cart-shopping"></i> Cart
+            </a>
+          </div>
         </div>
       </div>
-
-      <div class="navsearch">
-        <select class="searchselect">
-          <option>All</option>
-        </select>
-        <input type="text" placeholder="Search Amazon" class="searchinput">
-        <div class="searchicon">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
-      </div>
-
-      <div class="navsignin">
-        <p><span>Hello, Sign in</span></p>
-        <p class="navsecond">Account & Lists</p>
-      </div>
-
-      <div class="navreturn">
-        <p><span>Returns</span></p>
-        <p class="navsecond">& Orders</p>
-      </div>
-
-      <div class="navcart">
-        <i class="fa-solid fa-cart-shopping"></i>
-        Cart
-      </div>
     </div>
+  </nav>
 
-    <div class="panel">
-      <div class="panelall">
-        <i class="fa-solid fa-bars"></i> All
-      </div>
-      <div class="paneloptions">
-        <p>Today's Deals</p>
-        <p>Customer Service</p>
-        <p>Registry</p>
-        <p>Gift Cards</p>
-        <p>Sell</p>
-      </div>
-      <div class="paneldeals">
-        Shop deals in Electronics
-      </div>
     </div>
-  </header>
 
   <!-- Hero Section -->
   <div class="herosection">
